--- a/package.json
+++ b/package.json
@@ -1,103 +1,104 @@
 {
-  "name": "vscode-paste-image",
-  "displayName": "Paste Image",
-  "description": "paste image from clipboard directly",
-  "version": "0.9.5",
-  "publisher": "mushan",
-  "author": {
-    "name": "mushan",
-    "email": "mushanmail@126.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mushanshitiancai/vscode-paste-image.git"
-  },
-  "homepage": "https://github.com/mushanshitiancai/vscode-paste-image/blob/master/README.md",
-  "bugs": {
-    "url": "https://github.com/mushanshitiancai/vscode-paste-image/issues"
-  },
-  "icon": "res/icon.png",
-  "galleryBanner": {
-    "color": "#252526",
-    "theme": "dark"
-  },
-  "keywords": [
-    "paste",
-    "image",
-    "markdown",
-    "paste image",
-    "keybindings"
-  ],
-  "engines": {
-    "vscode": "^1.0.0"
-  },
-  "categories": [
-    "Other"
-  ],
-  "activationEvents": [
-    "onCommand:extension.pasteImage"
-  ],
-  "main": "./out/src/extension",
-  "contributes": {
-    "configuration": {
-      "type": "object",
-      "title": "Paste Image Configuration",
-      "properties": {
-        "pasteImage.path": {
-          "type": "string",
-          "default": "${currentFileDir}",
-          "description": "The destination to save image file.You can use variable ${currentFileDir} and ${projectRoot}. ${currentFileDir} will be replace by the path of directory that contain current editing file. ${projectRoot} will be replace by path of the project opened in vscode."
-        },
-        "pasteImage.basePath": {
-          "type": "string",
-          "default": "${currentFileDir}",
-          "description": "The base path of image url.You can use variable ${currentFileDir} and ${projectRoot}. ${currentFileDir} will be replace by the path of directory that contain current editing file. ${projectRoot} will be replace by path of the project opened in vscode. If you set basePath to empty String, it will insert absolute path to file."
-        },
-        "pasteImage.forceUnixStyleSeparator": {
-          "type": "boolean",
-          "default": true,
-          "description": "Force set the file separator styel to unix style. If set false, separator styel will follow the system style."
-        },
-        "pasteImage.prefix": {
-          "type": "string",
-          "default": "",
-          "description": "The string prepend to the resolved image path before paste."
-        },
-        "pasteImage.suffix": {
-          "type": "string",
-          "default": "",
-          "description": "The string append to the resolved image path before paste."
-        }
-      }
-    },
-    "commands": [
-      {
-        "command": "extension.pasteImage",
-        "title": "Paste Image"
-      }
-    ],
-    "keybindings": [
-      {
-        "command": "extension.pasteImage",
-        "key": "ctrl+alt+v",
-        "mac": "cmd+alt+v",
-        "when": "editorTextFocus"
-      }
-    ]
-  },
-  "scripts": {
-    "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
-    "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install"
-  },
-  "dependencies": {
-    "copy-paste": "^1.2.0",
-    "fs-extra": "^3.0.1",
-    "moment": "^2.14.1",
-    "upath": "^1.0.0"
-  },
-  "devDependencies": {
-    "typescript": "^1.8.5",
-    "vscode": "^0.11.0"
-  }
+	"name": "vscode-paste-image",
+	"displayName": "Paste Image",
+	"description": "paste image from clipboard directly",
+	"version": "0.9.5",
+	"publisher": "qhy",
+	"author": {
+		"name": "qhy",
+		"email": "qhy285571052@gmail.com"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/285571052/vscode-paste-image.git"
+	},
+	"homepage": "https://github.com/285571052/vscode-paste-image/blob/master/README.md",
+	"bugs": {
+		"url": "https://github.com/285571052/vscode-paste-image/issues"
+	},
+	"icon": "res/icon.png",
+	"galleryBanner": {
+		"color": "#252526",
+		"theme": "dark"
+	},
+	"keywords": [
+		"paste",
+		"image",
+		"markdown",
+		"paste image",
+		"keybindings"
+	],
+	"engines": {
+		"vscode": "^1.0.0"
+	},
+	"categories": [
+		"Other"
+	],
+	"activationEvents": [
+		"onCommand:extension.pasteImage"
+	],
+	"main": "./out/src/extension",
+	"contributes": {
+		"configuration": {
+			"type": "object",
+			"title": "Paste Image Configuration",
+			"properties": {
+				"pasteImage.path": {
+					"type": "string",
+					"default": "${currentFileDir}",
+					"description": "The destination to save image file.You can use variable ${currentFileDir} and ${projectRoot}. ${currentFileDir} will be replace by the path of directory that contain current editing file. ${projectRoot} will be replace by path of the project opened in vscode."
+				},
+				"pasteImage.basePath": {
+					"type": "string",
+					"default": "${currentFileDir}",
+					"description": "The base path of image url.You can use variable ${currentFileDir} and ${projectRoot}. ${currentFileDir} will be replace by the path of directory that contain current editing file. ${projectRoot} will be replace by path of the project opened in vscode. If you set basePath to empty String, it will insert absolute path to file."
+				},
+				"pasteImage.forceUnixStyleSeparator": {
+					"type": "boolean",
+					"default": true,
+					"description": "Force set the file separator styel to unix style. If set false, separator styel will follow the system style."
+				},
+				"pasteImage.prefix": {
+					"type": "string",
+					"default": "",
+					"description": "The string prepend to the resolved image path before paste."
+				},
+				"pasteImage.suffix": {
+					"type": "string",
+					"default": "",
+					"description": "The string append to the resolved image path before paste."
+				}
+			}
+		},
+		"commands": [
+			{
+				"command": "extension.pasteImage",
+				"title": "Paste Image"
+			}
+		],
+		"keybindings": [
+			{
+				"command": "extension.pasteImage",
+				"key": "ctrl+shift+v",
+				"mac": "cmd+shift+v",
+				"when": "editorTextFocus"
+			}
+		]
+	},
+	"scripts": {
+		"vscode:prepublish": "node ./node_modules/vscode/bin/compile",
+		"compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
+		"postinstall": "node ./node_modules/vscode/bin/install"
+	},
+	"dependencies": {
+		"copy-paste": "^1.2.0",
+		"fs-extra": "^3.0.1",
+		"moment": "^2.14.1",
+		"pinyin": "^2.8.3",
+		"upath": "^1.0.0"
+	},
+	"devDependencies": {
+		"typescript": "^1.8.5",
+		"vscode": "^0.11.0"
+	}
 }
